# telix

./: .editorconfig  .gitignore  .readthedocs.yaml  LICENSE.txt  README.rst  pyproject.toml  tox.ini
.claude/: CLAUDE.md
.github/workflows/: ci.yml
docs/: conf.py  contributing.rst  files.rst  history.rst  index.rst  intro.rst  protocols.rst  requirements.txt  scripting-api.rst  scripting.rst  session-manager.rst  user-manual.rst
docs/_static/: custom.css
telix/: __init__.py  _paths.py  autoreply.py  chat.py  client_repl.py  client_repl_commands.py  client_repl_dialogs.py  client_repl_render.py  client_repl_travel.py  client_shell.py  client_tui.py  client_tui_app.py  client_tui_autoreplies.py  client_tui_bars.py  client_tui_base.py  client_tui_captures.py  client_tui_dialogs.py  client_tui_editors.py  client_tui_highlights.py  client_tui_macros.py  client_tui_rooms.py  client_tui_session_manager.py  color_filter.py  directory.py  gmcp_snapshot.py  highlighter.py  macros.py  main.py  mtts.py  paths.py  progressbars.py  repl_theme.py  rooms.py  scripts.py  session_context.py  ssh_client.py  ssh_transport.py  terminal.py  terminal_unix.py  terminal_win32.py  (+4 more)
telix/data/: directory.json  favorites.ini
telix/help/: __init__.py  autoreplies.md  commands.md  highlights.md  keybindings.md  macros.md  progressbars.md  room-mapping.md  rooms.md  sessions.md  triggers.md
telix/tests/: conftest.py  test_autoreply.py  test_chat.py  test_client_repl.py  test_client_shell.py  test_client_tui.py  test_clipboard.py  test_color_filter.py  test_confirm_dialog.py  test_directory.py  test_flash_animation.py  test_gmcp_client.py  test_help.py  test_highlighter.py  test_macros.py  test_main.py  test_mtts.py  test_progressbars.py  test_render_helpers.py  test_repl_commands.py  test_repl_theme.py  test_rooms.py  test_scripts.py  test_session_context.py  test_smoke.py  test_ssh_client.py  test_ssh_transport.py  test_subprocess_errors.py  test_terminal.py  test_toolbar_fill.py  test_travel.py  test_trigger.py  test_tui_bars.py  test_tui_captures.py  test_tui_rooms.py  test_util.py  test_ws_client.py  test_ws_transport.py
tools/: import_modem_xyz.py
