[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telix"
version = "0.0.1"
description = "A TUI telnet, WebSocket, and MUD client"
readme = "README.rst"
license = "ISC"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Jeff Quast", email = "contact@jeffquast.com"},
]
keywords = [
    "telnet",
    "websocket",
    "mud",
    "tui",
    "client",
    "repl",
    "blessed",
    "textual",
    "asyncio",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: Terminals :: Telnet",
]
requires-python = ">=3.10"
dependencies = [
    "telnetlib3>=3.0.2,<4",
    "blessed>=1.32,<2",
    "textual>=0.44,<1",
    "wcwidth>=0.6.0,<1",
    "websockets>=14.0,<15",
]

[project.optional-dependencies]
docs = [
    "Sphinx>3",
    "sphinx_rtd_theme",
    "myst-parser",
]

[project.scripts]
telix = "telix.main:main"
telix-ws = "telix.ws_client:main"

[project.urls]
Homepage = "https://github.com/jquast/telix"
Repository = "https://github.com/jquast/telix"
Issues = "https://github.com/jquast/telix/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/telix/**",
    "/docs/**",
    "/README.rst",
    "/CONTRIBUTING.rst",
    "/LICENSE.txt",
    "/tox.ini",
    "/.gitignore",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["telix"]
artifacts = ["telix/help/*.md", "telix/data/*.json"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade (modernize syntax)
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "ICN",    # flake8-import-conventions
    "TID",    # flake8-tidy-imports
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking (move type-only imports to TYPE_CHECKING)
    "PL",     # pylint rules
    "SLF",    # flake8-self (private member access)
    "RUF",    # ruff-specific rules
]
ignore = [
    "PLR09",    # too-many-* (branches, args, etc.)
    "PLR2004",  # magic value comparison
    "PLW0603",  # global statement
    "PLW2901",  # redefined loop variable
    "PLC0414",  # useless-import-alias (we use X as X for re-exports)
    "SLF001",   # private member access (we access external lib internals)
    "SIM108",   # ternary operator (not always clearer)
    "SIM105",   # suppressible-exception (contextlib.suppress not always clearer)
    "SIM115",   # open-file-with-context-handler (not always applicable)
    "RUF012",   # mutable-class-default (ClassVar annotation noise)
    "RUF059",   # unused-unpacked-variable (we use _s, _e pattern)
    "RUF006",   # asyncio-dangling-task (false positives in async code)
    "RUF002",   # ambiguous-unicode-character-docstring
    "B007",     # unused-loop-control-variable (intentional named vars)
    "B017",     # assert-raises-exception (too strict for tests)
    "B023",     # function-uses-loop-variable (legitimate closures)
    "N806",     # non-lowercase-variable-in-function (META constants)
    "N811",     # constant-imported-as-non-constant
    "TCH",      # type-checking imports (deferred to future cleanup)
    "SIM102",   # collapsible-if (readability preference)
    "SIM117",   # multiple-with-statements (readability preference)
    "RUF005",   # collection-literal-concatenation (style preference)
    "B018",     # useless-expression (test import probing)
]

[tool.ruff.lint.isort]
length-sort = true
split-on-trailing-comma = false
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
no-lines-before = ["local-folder"]
known-first-party = ["telix"]

[tool.ruff.lint.flake8-import-conventions]
banned-from = [
    # stdlib
    "abc", "collections", "contextlib", "dataclasses", "datetime",
    "functools", "importlib", "io", "itertools", "json", "logging",
    "math", "os", "pathlib", "re", "shutil", "signal", "subprocess",
    "sys", "tempfile", "textwrap", "time", "traceback",
    # 3rd party
    "blessed", "blessed.keyboard", "blessed.line_editor",
    "rich.style", "rich.text",
    "textual", "textual.app", "textual.binding", "textual.containers",
    "textual.css.query", "textual.screen", "textual.widgets",
    "textual.widgets.tree",
    "wcwidth", "wcwidth.sgr_state",
    # telnetlib3
    "telnetlib3", "telnetlib3.client", "telnetlib3.client_shell",
    "telnetlib3._session_context", "telnetlib3.stream_reader",
    "telnetlib3.stream_writer", "telnetlib3.telopt",
]

[tool.ruff.lint.per-file-ignores]
"telix/tests/*" = [
    "F401",   # unused imports (fixtures)
    "F811",   # redefinition (fixtures)
    "E402",   # import position (conftest)
    "E712",   # comparison to False
    "PLR",    # pylint complexity in tests
    "SLF001", # private member access in tests
    "ICN003", # from-imports OK in tests for brevity
    "TID252", # relative imports in tests
]

[tool.mypy]
python_version = "3.10"
strict = true
disallow_subclassing_any = false
ignore_missing_imports = true
disable_error_code = ["union-attr"]

[[tool.mypy.overrides]]
module = ["telix.tests.*"]
ignore_errors = true
